target_sources(visqol PRIVATE
alignment.cc
amatrix.cc
commandline_parser.cc
comparison_patches_selector.cc
convolution_2d.cc
envelope.cc
equivalent_rectangular_bandwidth.cc
fast_fourier_transform.cc
fft_manager.cc
gammatone_filterbank.cc
gammatone_spectrogram_builder.cc
image_patch_creator.cc
libsvm_target_observation_convertor.cc
main.cc
misc_audio.cc
misc_math.cc
misc_vector.cc
neurogram_similiarity_index_measure.cc
rms_vad.cc
signal_filter.cc
spectrogram.cc
speech_similarity_to_quality_mapper.cc
support_vector_regression_model.cc
svr_similarity_to_quality_mapper.cc
vad_patch_creator.cc
visqol.cc
visqol_api.cc
visqol_manager.cc
wav_reader.cc
xcorr.cc)

add_subdirectory(include)